<resources>
    <string name="app_name">Maintenance Logger</string>
    <string name="button_save">Save Vehicle Info.</string>
    <string name="make_text">Vehicle Make...Chevrolet, Toyota, Ford etc.</string>
    <string name="model_text">Vehicle Model...Camaro, 4Runner, Raptor etc.</string>
    <string name="year_text">Vehicle Year...1969, 2001, 2018 etc.</string>
    <string name="nickname_text">Nickname your ride...(optional)</string>
    <string name="other_description">Other descriptions...(optional)</string>
    <string name="listview_title">Vehicle List</string>
    <string name="default_string">Change This Text</string>
    <string name="create_vehicle_title">Create Your Vehicles</string>
    <string name="view_list">View Vehicles</string>
    <string name="content_description">Picture of tools</string>

    <!-- Write your comment here -->

</resources>
